Navbar fixed using z-index property, cards fixed

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,16 +1,17 @@
 .navbar-lewagon {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  justify-content: space-between;
-  background: white;
+    position: fixed !important;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    justify-content: space-between;
+    background: white;
 }
 
 .navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+    flex-grow: 0;
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+    width: 40px;
 }
